spacing issues navbar fixed

--- a/winghacks24/src/components/navbar/Navbar.css
+++ b/winghacks24/src/components/navbar/Navbar.css
@@ -8,6 +8,8 @@
     position: sticky;
     top: 0;
     z-index: 999;
+    margin-right: 10px;
+    padding-right: 20px;
   }
   
   .navbar-container {
@@ -17,6 +19,7 @@
     height: 70px;
     max-width: 1500px;
     font-family: 'Pixelify Sans', sans-serif;
+    
   }
   
   .navbar-logo {
